# wyslijco.github.io

./: .gitignore  .pre-commit-config.yaml  .python-version  CNAME  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/actions/validate-organizations/: .gitignore  README.md  action.yml  krs_puller.py  pyproject.toml  repository.py  requirements.txt  validate.py  validators.py
.github/actions/validate-organizations/tests/: conftest.py  test_file_repository.py  test_integration.py  test_krs_validation.py  test_organization_schema.py  test_slug_conflicts.py
.github/actions/validate-organizations/tests/fixtures/: empty_dostawa.yaml  invalid_krs.yaml  missing_fields.yaml  reserved_slug.yaml  valid_org.yaml
organizacje/: testowa.yaml
organizations/: Czarnej-Owcy.yaml  adzie.yaml  animalsom.yaml  arce-dla-zwierzat.yaml  braciom-mniejszym.yaml  canisowi.yaml  chatulowi.yaml  czarnej-owcy.yaml  diozowi.yaml  dzikiej-klinice.yaml  house-of-cats.yaml  judyciakom.yaml  kociemu-pogotowiu.yaml  ktozowi.yaml  la-faunie.yaml  medorowi.yaml  pioziakom.yaml  piozowi.yaml  podopiecznym-ady.yaml  pro-animale.yaml  przyjaciolom-palucha.yaml  schronisku-dla-zwierzat-w-olsztynie.yaml  szopowisku.yaml  testowa.yaml  testowa2.yaml  testowa_pusta.yaml  testowwwej.yaml  testtovvej.yaml  testtovvejj.yaml  wiozowi.yaml  zwierzakom-la-fauny.yaml  zwierzakom-z-wioz.yaml  zwierzkom-z-ktoz.yaml
site/: Gemfile  _config.yml  config.py  input.css  organizations.py  organizations.yaml  requirements.txt  server.py
(+41 files in other folders)
